axi_lite.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:50:14 **** Incremental Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for `main-build'.
13:50:50 **** Incremental Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for `main-build'.
13:51:39 **** Incremental Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for `main-build'.
15:06:15 **** Incremental Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for `main-build'.
15:06:37 **** Incremental Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for `main-build'.
15:07:58 **** Incremental Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for `main-build'.
15:09:48 **** Auto Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../m_axi_lite_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:68:5: warning: implicit declaration of function 'usleep' [-Wimplicit-function-declaration]
     usleep(500000)
     ^~~~~~
In file included from ../src/helloworld.c:51:0:
../src/m_axi_lite.h:35:4: error: expected ';' before 'Xil_Out32'
    Xil_Out32((BaseAddress) + (RegOffset), (u32)(Data))
    ^
../src/helloworld.c:69:5: note: in expansion of macro 'M_AXI_LITE_mWriteReg'
     M_AXI_LITE_mWriteReg(BaseAddress, slv_reg0, 0x02);
     ^~~~~~~~~~~~~~~~~~~~
../src/m_axi_lite.h:35:4: error: expected ';' before 'Xil_Out32'
    Xil_Out32((BaseAddress) + (RegOffset), (u32)(Data))
    ^
../src/helloworld.c:71:2: note: in expansion of macro 'M_AXI_LITE_mWriteReg'
  M_AXI_LITE_mWriteReg(BaseAddress, slv_reg0, 0x03);
  ^~~~~~~~~~~~~~~~~~~~
../src/m_axi_lite.h:35:4: error: expected ';' before 'Xil_Out32'
    Xil_Out32((BaseAddress) + (RegOffset), (u32)(Data))
    ^
../src/helloworld.c:73:2: note: in expansion of macro 'M_AXI_LITE_mWriteReg'
  M_AXI_LITE_mWriteReg(BaseAddress, slv_reg0, 0x04);
  ^~~~~~~~~~~~~~~~~~~~
../src/helloworld.c:75:1: error: expected ';' before '}' token
 }
 ^
make: *** [src/helloworld.o] ´íÎó 1
15:10:37 **** Auto Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../m_axi_lite_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:68:5: warning: implicit declaration of function 'usleep' [-Wimplicit-function-declaration]
     usleep(500000);
     ^~~~~~
'Finished building: ../src/helloworld.c'
' '
'Building target: m_axi_lite.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../m_axi_lite_bsp/ps7_cortexa9_0/lib -o "m_axi_lite.elf"  ./src/helloworld.o ./src/m_axi_lite.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: m_axi_lite.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size m_axi_lite.elf  |tee "m_axi_lite.elf.size"
   text	   data	    bss	    dec	    hex	filename
  19604	   1148	  22584	  43336	   a948	m_axi_lite.elf
'Finished building: m_axi_lite.elf.size'
' '
15:10:53 **** Incremental Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for `main-build'.
15:11:04 **** Incremental Build of configuration Debug for project m_axi_lite ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for `main-build'.
